--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -515,51 +515,7 @@ legend{
 	text-align: center;
 }
 
-.user-card {
-  display: flex;
-  width: 90%;
-  gap: 20px;
-  margin-bottom: 30px;
-  align-items: flex-start;
-  border: 2px solid #e0e0e0;
-  padding: 15px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  max-width: 800px;
-}
 
-.user-card img {
-  width: 200px;
-  height: auto;
-  max-height: 500px;
-  margin: 10px auto; 
-  object-fit: cover; 
-  border-radius: 10px; 
-  border: 2px solid red;
-}
-
-.desc {
-  flex: 1;
-  color: #fff;
-}
-
-.rating {
-  color: gold;
-  margin: 5px 0;
-}
-
-.location {
-  font-style: italic;
-  color: #666;
-}
-
-.testimonials {
-	display: flex;
- 	flex-direction: column;
-  	align-items: center;
-  	padding: 20px;
-}
 
 .test-instruct {
 	width: 95%;
@@ -583,6 +539,8 @@ legend{
 	padding: 10px;
 }
 
+
+
 .review	{
 	width: 50%;
   	margin-left: auto;
@@ -601,6 +559,54 @@ textarea {
   	border-radius: 4px;
 
 }
+
+main .test { 
+	width: 90%; 
+	margin: 0 auto; 
+	display:grid; 
+	grid-template-columns: repeat(auto-fill, minmax(600px, 1fr)); 
+	grid-gap: 20px; 
+	padding-top:20px;
+    
+	}
+
+div.user-card { 
+	display: grid;
+    grid-template-columns: 200px 1fr;
+	width: 700px;
+	height: auto;
+	border:2px solid #fff;
+	border-radius: 8px;
+	margin: 0 auto;
+    gap: 20px;
+    padding: 20px;
+	}
+
+.user-card img { 
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	object-position:right;
+	border: 2px solid #C20E35;
+	border-radius: 8px;
+	margin: 20px auto;
+	}
+
+div .desc{ 
+	padding: 5px; 
+	text-align: center;
+	color:#fff;
+	}
+
+.rating {
+  color: gold;
+  margin: 5px 0;
+}
+
+
+
+
+
 
 
 
